# ESIN

./: .gitignore  README.md
Estructures-Linials/: CMakeLists.txt  Llista.cpp  LlistaIterator.cpp  LlistaIterator.h  test.cpp
Estructures-Linials-Estatiques/: LlistaDobleEncadenada.cpp  LlistaDobleEncadenada.h  LlistaDoblementEncadenada.cpp  Pila.cpp  Pila.h  test.cpp
Estructures-Linials/Diccionaris/AVL/: DicClauValor.cpp  DicClauValor.h
Estructures-Linials/Diccionaris/BTS/: DicClau.cpp  DicClau.h  DicClauValor.cpp  DicClauValor.h  DicClauValorIter.h
Estructures-Linials/Diccionaris/HEAP/: CuaPrio.h
Estructures-Linials/Diccionaris/TST/: TST.cpp  TST.h
Estructures-Linials/Graf/: LlistaIterator.cpp  LlistaIterator.h  graf.cpp  graf.h
Estructures-Linials/Llistes-Piles/: Llista.h  Pila.cpp  Pila.h
Laboratori/Activitats/: Activitat1.cpp  CMakeLists.txt
Laboratori/Activitats/Activitat2 - X84340/: Activitat2.cpp  main.cc
Laboratori/Activitats/Activitat2- X83764/: Activitat2.cpp  main.cc
Laboratori/Activitats/Activitat3-X35140/: main.cpp  sample-2.cor  solution.cpp
Laboratori/Exercicis/: CMakeLists.txt  Exercici4-3.cpp  Test.cpp
Laboratori/Jutge/: CMakeLists.txt  X32967.cpp  X90767.cpp
Laboratori/Jutge/Arbres/P18593/: solution.cpp
Projecte/: Entrega.tgz
Projecte/Terminal/: CMakeLists.txt  Makefile  build.sh  cataleg.hpp  cataleg.rep  cataleg.t  check_result.py  contenidor.cpp  contenidor.hpp  contenidor.rep  driver_gestterm.cpp  gestterm.err  terminal.cpp  terminal.hpp  terminal.rep  ubicacio.cpp  ubicacio.hpp  ubicacio.rep
incl/esin/: util
(+42 files in other folders)
